--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,14 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+
     defaultConfig {
         applicationId "org.d3if4203.galerihewan"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -51,6 +53,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 
 }
